--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-object-rest-spread"
   ]
