--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,12 @@
   "plugins": [
     "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-syntax-object-rest-spread"
+    "@babel/plugin-syntax-object-rest-spread",
+    ["module-resolver", {
+      "root": ".",
+      "alias": {
+        "~": "./src"
+      }
+    }]
   ]
 }
