--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^5.5.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
@@ -47,13 +48,14 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.65.0",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-eslint": "^5.0.0"
+    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-node-resolve": "^3.4.0"
   },
   "scripts": {
     "clean": "rimraf lib",
     "prestart": "npm run clean",
     "start": "rollup -c -w",
-    "demo": "npm run start --prefix demo",
+    "demo": "npm run start --prefix demos/cra",
     "prebuild": "npm run clean",
     "build": "rollup -c",
     "prepublish": "npm run build"
