--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^5.5.0",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-flowtype": "^2.50.1",
     "eslint-plugin-flowtype-errors": "^3.6.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
@@ -57,6 +57,7 @@
     "prestart": "npm run clean",
     "start": "rollup -c -w",
     "demo": "npm run start --prefix demos/cra",
+    "typecheck": "node node_modules/.bin/flow",
     "prebuild": "npm run clean",
     "build": "rollup -c",
     "prepublish": "npm run build"
