--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
       "modules": false,
       "loose": true,
       "targets": {
-        "browsers": ["last 1 version"]
+        "browsers": ["ie 10", "ios 7"]
       }
     }],
     "@babel/preset-flow",
