--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-eslint": "^9.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^5.5.0",
+    "eslint-config-google": "^0.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.1",
     "eslint-plugin-flowtype-errors": "^3.6.0",
