--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "state-mint",
   "description": "an intuitive, yet powerful state layer that keeps your project fresh 🌿",
   "author": "Harry Solovay <harrysolovay@gmail.com> (harrysolovay.com)",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "license": "MIT",
   "main": "lib/state-mint.cjs.js",
   "module": "lib/state-mint.es.js",
@@ -60,7 +60,7 @@
     "demo": "npm run start --prefix demos/cra",
     "typecheck": "node node_modules/.bin/flow",
     "prebuild": "npm run clean",
-    "build": "rollup -c",
+    "build": "rollup -c && flow-copy-source src lib",
     "prepublish": "npm run build"
   }
 }
