--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "doctoc": "^1.3.1",
     "eslint": "^5.5.0",
     "eslint-config-google": "^0.10.0",
     "eslint-config-react-app": "^2.1.0",
@@ -61,6 +62,7 @@
     "typecheck": "node node_modules/.bin/flow",
     "prebuild": "npm run clean",
     "build": "rollup -c && flow-copy-source src lib",
+    "doctoc": "doctoc README.md --maxlevel 3 --notitle",
     "prepublish": "npm run build"
   }
 }
