--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-loop-optimizer": "^1.4.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "doctoc": "^1.3.1",
     "eslint": "^5.5.0",
@@ -58,7 +59,7 @@
     "clean": "rimraf lib",
     "prestart": "npm run clean",
     "start": "rollup -c -w",
-    "demo": "npm run start --prefix demos/cra",
+    "demo": "npm run start --prefix demos/basic-cra",
     "typecheck": "node node_modules/.bin/flow",
     "prebuild": "npm run clean",
     "build": "rollup -c && flow-copy-source src lib",
