--- a/demos/firebase/package.json
+++ b/demos/firebase/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "demo",
+  "name": "firebase-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5",
+    "styled-components": "^3.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
