--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lib"
   ],
   "repository": "https://github.com/harrysolovay/state-mint",
+  "bugs": "https://github.com/harrysolovay/state-mint/issues",
   "keywords": [
     "statemint",
     "state",
@@ -59,7 +60,7 @@
     "clean": "rimraf lib",
     "prestart": "npm run clean",
     "start": "rollup -c -w",
-    "demo": "npm run start --prefix demos/basic-cra",
+    "demo": "npm run start --prefix demos/firebase",
     "typecheck": "node node_modules/.bin/flow",
     "prebuild": "npm run clean",
     "build": "rollup -c && flow-copy-source src lib",
