--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,9 @@
   ],
   "plugins": [
     "@babel/plugin-transform-runtime",
-    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-class-properties", {
+      "loose": true
+    }],
     "@babel/plugin-syntax-object-rest-spread",
     "@babel/plugin-transform-object-assign",
     "loop-optimizer",
