--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.2",
   "license": "MIT",
   "main": "lib/state-mint.cjs.js",
+  "unpkg": "lib/state-mint.umd.js",
   "module": "lib/state-mint.es.js",
   "files": [
     "lib"
@@ -39,6 +40,7 @@
     "babel-eslint": "^9.0.0",
     "babel-plugin-loop-optimizer": "^1.4.1",
     "babel-plugin-module-resolver": "^3.1.1",
+    "cross-env": "^5.2.0",
     "doctoc": "^1.3.1",
     "eslint": "^5.5.0",
     "eslint-config-google": "^0.10.0",
@@ -49,21 +51,23 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.80.0",
-    "flow-copy-source": "^2.0.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.65.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-node-resolve": "^3.4.0"
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-size-snapshot": "^0.7.0",
+    "rollup-plugin-uglify": "4.0.0"
   },
   "scripts": {
     "clean": "rimraf lib",
     "prestart": "npm run clean",
-    "start": "rollup -c -w",
-    "demo": "npm run start --prefix demos/firebase",
+    "start": "cross-env NODE_ENV=development rollup -c -w",
+    "demo": "npm run start --prefix demos/basic-cra",
     "typecheck": "node node_modules/.bin/flow",
     "prebuild": "npm run clean",
-    "build": "rollup -c && flow-copy-source src lib",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "doctoc": "doctoc README.md --maxlevel 3 --notitle",
     "prepublish": "npm run build"
   }
