subscription inference to stores initialized after components

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     }],
     "eol-last": [2, "never"],
     "no-var": 0,
-    "no-invalid-this": 0
+    "no-invalid-this": 0,
+    "array-bracket-spacing": 0
   }
 }
